--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -107,3 +107,47 @@ a{
     background-color: #ff0000;
   }
 }
+
+.input-popup{  
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background:#ddd;
+  justify-content: center;
+  align-items: center ;
+
+  .input-popup-container{
+    display:flex;
+    flex-direction: column;
+    gap: 5px;
+    width: 300px;
+    height: 300px;
+    background: #fff;
+    border-radius: 12px;
+    padding: 20px;
+    box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.4);
+  }
+
+  label{
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+  }
+
+  input{
+    width: 100%;
+  }
+
+  p{
+    font-size: 12px;
+    color: #777;
+    margin-bottom: 15px;
+  }
+}
+
+.test-code{
+  position: fixed;
+  bottom: 35px;
+  left: 0;
+  right: 0;
+}
