--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -19,6 +19,29 @@ a{
   align-items: center;
   justify-content: flex-end;
 
+  .button-reset {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    text-indent: -9999px;
+    background-color: transparent;
+    border: 0;
+    background-color: #eaeaea;
+    border-radius: 50%;
+    margin-right: 5px;
+
+    &::after {
+      content: '↩️';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      text-indent: 0;
+      font-size: 24px;
+      line-height: 40px;
+      transform: translate(-50%, -50%);
+    }
+  }
+
   .button-config {
     position: relative;
     width: 40px;
@@ -36,9 +59,9 @@ a{
       left: 50%;
       text-indent: 0;
       font-size: 24px;
+      line-height: 40px;
       transform: translate(-50%, -50%);
     }
-
   }
 }
 
@@ -121,7 +144,7 @@ a{
     flex-direction: column;
     gap: 5px;
     width: 300px;
-    height: 300px;
+    /* height: 300px; */
     background: #fff;
     border-radius: 12px;
     padding: 20px;
@@ -150,4 +173,32 @@ a{
   bottom: 35px;
   left: 0;
   right: 0;
+}
+
+.slot-count-container {
+  display: flex;
+
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox  */
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
+
+  button {
+    width: 20px;
+    height: 20px;    
+  }
+}
+
+.question-list-container {
+  margin-bottom: 15px;
+}
+
+.add-button {
+  margin-top: auto;
 }
